# SimpleJson

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/simplejson/: Reader.h  Value.h  Writer.h
src/: CMakeLists.txt  Reader.cpp  Value.cpp  Writer.cpp
test/: .clang-tidy  CMakeLists.txt  CMakeLists.txt.in  ReaderTest.cpp  ReaderTest.h  TestHelper.cpp  TestHelper.h  ValueTest.cpp  ValueTest.h  WriterTest.cpp  WriterTest.h
